data/diff_tests/wasmtime/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2081.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\90\80\80\80\00\01\03\65\6e\76\08\63"
    "\61\6c\6c\62\61\63\6b\00\00\03\82\80\80\80\00\01"
    "\00\07\88\80\80\80\00\01\04\74\65\73\74\00\01\0a"
    "\92\80\80\80\00\01\8c\80\80\80\00\00\10\00\04\7f"
    "\41\2a\05\10\01\0b\0b"
  )
""
)